k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vasundhara
  labels:
    name: vasundhara
    app: vasundhara
